add `stop` script

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "stop": "killall -9 node",
     "start": "babel-node index.js"
   },
   "repository": {
